<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActualizarAutorActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtCampeonAct"
            app:layout_constraintStart_toStartOf="@+id/numLibros"
            app:layout_constraintEnd_toEndOf="@+id/numLibros" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/numLibros"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtFechaNacimiento" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtApellidos"
            app:layout_constraintStart_toStartOf="@+id/txtApellidos" app:layout_constraintEnd_toEndOf="@+id/txtApellidos"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtApellidos" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/txtNombres"
            app:layout_constraintStart_toStartOf="@+id/txtNombres" app:layout_constraintEnd_toEndOf="@+id/txtNombres"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNombres" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/autor_delete"
            android:layout_width="131dp"
            android:layout_height="45dp"
            android:id="@+id/btnEliminar"
            android:layout_marginTop="68dp"
            app:layout_constraintTop_toBottomOf="@+id/txtCampeonAct" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.125"/>
    <Button
            android:text="@string/trl_actualizarLibro"
            android:layout_width="131dp"
            android:layout_height="45dp"
            android:id="@+id/btnActualizar"
            app:layout_constraintStart_toEndOf="@+id/btnEliminar"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="68dp"
            app:layout_constraintTop_toBottomOf="@+id/txtCampeonAct" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.632"/>
    <Button
            android:text="@string/trl_crearLibro"
            android:layout_width="131dp"
            android:layout_height="45dp"
            android:id="@+id/btnCrearLibro"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/btnEliminar"
            app:layout_constraintStart_toStartOf="@+id/btnEliminar"
            app:layout_constraintEnd_toEndOf="@+id/btnEliminar" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/trl_GestionarLibro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnGestionarLIbros"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/btnActualizar"
            app:layout_constraintStart_toEndOf="@+id/btnCrearLibro" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.703"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/numLibros"
            app:layout_constraintStart_toStartOf="@+id/txtFechaNacimiento"
            app:layout_constraintEnd_toEndOf="@+id/txtFechaNacimiento" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtFechaNacimiento"/>
    <Button
            android:text="@string/trl_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMenuRetorno"
            app:layout_constraintEnd_toEndOf="@+id/btnGestionarLIbros"
            android:layout_marginEnd="128dp" android:layout_marginRight="128dp"
            app:layout_constraintStart_toStartOf="@+id/btnCrearLibro" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.943"
            android:layout_marginTop="592dp" app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>